# obsidian-podcast

./: .gitignore  CLAUDE.md  README.md  hearing-sheet.md  pyproject.toml  requirements.md
.claude/: settings.json  vdd.config
.claude/agents/: implementer.md
.claude/commands/: precheck.md
.claude/release-specs/: feed-scraper.md  pipeline-integration.md  project-setup.md  storage-writer.md  tts-engine.md
.claude/skills/release/: skill.md
.claude/skills/release-ready/: skill.md
.claude/skills/task-decompose/: skill.md
.claude/skills/tdd/: skill.md
docs/: VDD_SETUP.md
scripts/: verify_llm_tts.py
src/obsidian_podcast/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py  test_cli.py  test_config.py  test_models.py  test_pipeline.py
src/obsidian_podcast/db/: state.py  test_state.py
src/obsidian_podcast/fetcher/: rss.py  test_rss.py
src/obsidian_podcast/llm/: __init__.py  base.py  claude.py  openai_provider.py  test_base.py  test_claude.py  test_openai_provider.py  test_tts_prep.py  tts_prep.py
src/obsidian_podcast/preprocessor/: test_text.py  text.py
src/obsidian_podcast/scraper/: extractor.py  test_extractor.py
src/obsidian_podcast/tts/: base.py  test_base.py
